tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/nir_and_char.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(null + 'a')

